@@ -155,6 +155,7 @@ class Shell
     #	  sh[:exists?, "foo"]
     #	  sh["exists?", "foo"]
     #	  
+    alias top_level_test test
     def test(command, file1, file2=nil)
       file1 = expand_path(file1)
       file2 = expand_path(file2) if file2
@@ -162,7 +163,11 @@ class Shell
 
       case command
       when Integer
-	top_level_test(command, file1, file2)
+	if file2
+	  top_level_test(command, file1, file2)
+	else
+	  top_level_test(command, file1)
+	end
       when String
 	if command.size == 1
 	  if file2
